--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
+    "clsx": "^2.0.0",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.1",
-    "zustand": "^4.5.0",
     "react-hook-form": "^7.49.2",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.1.0"
+    "react-router-dom": "^6.22.1",
+    "tailwind-merge": "^2.1.0",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
