--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.22.1",
+    "recharts": "^3.2.1",
     "tailwind-merge": "^2.1.0",
     "zustand": "^4.5.0"
   },
